REFACTOR : 자료형 변경 및 hansik 저장 구조 변경